applications/source-gitlab/xihe-gitlab.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "15G"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      location /api/graphql {
        return 403;
      }
      location /.well-known/openid-configuration {
        return 403;
      }
      location /oauth/discovery/keys {
        return 403;
      }
      location /users/sign_in {
        return 403;
      }
      location /users/sign_up {
        return 403;
      }
  name: xihe-gitlab-ingress
  namespace: source
spec:
  tls:
    - hosts:
        - source-xihe.test.osinfra.cn
      secretName: xihe-test-osinfra-cn-tls
  rules:
    - host: source-xihe.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: xihe-gitlab-service
              servicePort: 8080
            path: /

---
apiVersion: v1
kind: Service
metadata:
  name: xihe-gitlab-service
  namespace: source
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 80
    - name: ssh
      port: 22
      targetPort: ssh
  selector:
    app: xihe-gitlab

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xihe-gitlab
  namespace: source
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xihe-gitlab
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: xihe-gitlab
    spec:
      nodeSelector:
        gitlab: "true"
      securityContext:
        runAsUser: 0
      containers:
      - name: gitlab
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/gitlab-ee:lts-20221107
        resources:
          requests:
            cpu: 5000m
            memory: 20000Mi
          limits:
            cpu: 5000m
            memory: 28000Mi
        volumeMounts:
        - mountPath: /etc/gitlab
          name: gitlab-data
          subPath: config
        - mountPath: /var/log/gitlab
          name: gitlab-data
          subPath: logs
        - mountPath: /var/opt/gitlab
          name: gitlab-data
          subPath: data
      restartPolicy: Always
      volumes:
      - name: gitlab-data
        persistentVolumeClaim:
          claimName: xihe-gitlab-data-volume
